--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
     font-size: 9px;
     background: rgba(0, 0, 0, 0.7);
   }
+  #mini-map {
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    border: 2px solid white;
+    box-shadow: 0px 1px 4px rgba(0,0,0,0.3);
+    background-size: 75px 75px;
+    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+  #display-region {
+    position: relative;
+    border: 1px solid red;
+    display: block;
+  }
   </style>
 </head>
 <body>
@@ -52,9 +69,11 @@
   <div class='about'>
     <a href='https://github.com/anvaka/portrait#portrait'>About...</a>
   </div>
-  <a href='#' onclick='resetZoom()' class='reset-zoom' >Reset zoom</a>
-  <script src="index.js"></script>
- <script src="bundle.js"></script>
+  <!--a href='#' onclick='resetZoom()' class='reset-zoom' >Reset zoom</a-->
+  <div id='mini-map'>
+    <div id='display-region'></div>
+  </div>
+  <script src="bundle.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
