when hidden don't catch mouse events

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
    -moz-transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;
     opacity: 0;
+    pointer-events: none;
   }
 
   .key {
@@ -95,7 +96,7 @@
   <div class='help'>
     <h3>Portrait</h3>
     <p>
-    This is portrait of <span class='highlight'>Mark Twain</span>. It is made of his
+    This is a portrait of <span class='highlight'>Mark Twain</span>. It is made of his
     quotes.
     </p>
     <p>
@@ -108,8 +109,8 @@
   </div>
   <div class='help small'>
     <p>
-      This is portrait of <span class='highlight'>Mark Twain</span>. It is made of his
-      quotes. <span class='highlight'>Pinch</span> to zoom in and read his quotes.
+      This is a portrait of <span class='highlight'>Mark Twain</span>. It is made of his
+      quotes. <span class='highlight'>Pinch</span> or <span class='highlight'>mouse wheel</span> to zoom in.
       <a href='https://github.com/anvaka/portrait#portrait'>Read more</a> about this project...
     </p>
   </div>
